--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TodoList</title>
@@ -7,7 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+   <script>
+    if ("paintWorklet" in CSS) {
+      CSS.paintWorklet.addModule(
+        "https://www.unpkg.com/css-houdini-squircle/squircle.min.js"
+      );
+    }
+  </script>
 </body>
+
 </html>
